--- a/package.json
+++ b/package.json
@@ -1,3 +1,10 @@
+
+"homepage": "https://christinekerres.github.io/vive-la-fro-once",
+"scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+}
+
 {
   "name": "my-review-app",
   "version": "1.0.0",
@@ -13,6 +20,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
+    "gh-pages": "^6.3.0",
     "vite": "^6.1.0"
   }
 }
